--- a/src/WordLine/index.css
+++ b/src/WordLine/index.css
@@ -4,4 +4,5 @@
   justify-content: space-around;
   max-width: 60vw;
   margin: 0 auto 4rem;
+  height: 2rem;
 }
